tests/test_arithmetic/bad/division_by_zero.catala_en
## `Division_by_zero` exception management

### with integers

```catala
declaration scope Int:
  output i content decimal

scope Int:
  definition i equals 1 / 0
```

### with decimals

```catala
declaration scope Dec:
  output i content decimal

scope Dec:
  definition i equals 1. / 0.
```

### with money

```catala
declaration scope Money:
  output i content decimal

scope Money:
  definition i equals $10.0 / $0.0
```


```catala-test-inline
$ catala Interpret -s Dec
[ERROR]
division by zero at runtime

The division operator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:20.23-20.30:
└──┐
20 │   definition i equals 1. / 0.
   │                       ‾‾‾‾‾‾‾
   └┬ `Division_by_zero` exception management
    └─ with decimals

The null denominator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:20.28-20.30:
└──┐
20 │   definition i equals 1. / 0.
   │                            ‾‾
   └┬ `Division_by_zero` exception management
    └─ with decimals
#return code 123#
```

```catala-test-inline
$ catala Interpret -s Int
[ERROR]
division by zero at runtime

The division operator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:10.23-10.28:
└──┐
10 │   definition i equals 1 / 0
   │                       ‾‾‾‾‾
   └┬ `Division_by_zero` exception management
    └─ with integers

The null denominator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:10.27-10.28:
└──┐
10 │   definition i equals 1 / 0
   │                           ‾
   └┬ `Division_by_zero` exception management
    └─ with integers
#return code 123#
```

```catala-test-inline
$ catala Interpret -s Money
[ERROR]
division by zero at runtime

The division operator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:30.23-30.35:
└──┐
30 │   definition i equals $10.0 / $0.0
   │                       ‾‾‾‾‾‾‾‾‾‾‾‾
   └┬ `Division_by_zero` exception management
    └─ with money

The null denominator:
┌─⯈ tests/test_arithmetic/bad/division_by_zero.catala_en:30.31-30.35:
└──┐
30 │   definition i equals $10.0 / $0.0
   │                               ‾‾‾‾
   └┬ `Division_by_zero` exception management
    └─ with money
#return code 123#
```
